core/metrics/prometheus-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ir
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`metrics.apps.lab.lan`)
      priority: 10
      services:
        - name: prometheus-operator
          port: 8080
